cleaning up fonts and fixing alignment in code

--- a/css/layoutcss.css
+++ b/css/layoutcss.css
@@ -19,8 +19,10 @@
        url('/fonts/Genome-Thin.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
-body {
-    font-size: 20px;
+
+
+* {
+    font-size: 22px;
     padding: 0px;
     margin: 0px;
 }
@@ -34,6 +36,7 @@ body {
     width: 1400px;
     margin: 0 auto;
 }
+
 .wrapper {
     margin: 0 auto;
     padding: 0px;
@@ -106,10 +109,13 @@ body {
     font-family: 'White Elephant', Fallback, Impact;
     clear: both;
     text-align:center;
-    padding: 5px;
     border-bottom: solid 1px;
     border-top: solid 1px;
+}
 
+#credits {
+    font-size: 15px;
+}
 
 .update-headers {
     font-weight: bold;
